--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "discord.js": "^13.6.0",
+    "koa": "^2.13.4",
+    "koa-router": "^10.1.1",
     "marked": "^4.0.12",
     "node-fetch": "^3.2.1",
     "puppeteer": "^13.4.1",
