--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.mjs"
+  },
   "dependencies": {
     "discord.js": "^13.6.0",
     "koa": "^2.13.4",
