--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.mjs"
+    "start": "node --experimental-modules src/index.mjs"
   },
   "dependencies": {
     "discord.js": "^13.6.0",
