--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "heroku-postbuild": "npm run build"
+    "start": "node src/index.js"
   },
   "engines": {
     "node": "16.x"
@@ -12,7 +11,7 @@
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
     "marked": "^4.0.12",
-    "node-fetch": "^3.2.1",
+    "node-fetch": "^2.6.7",
     "puppeteer": "^13.4.1",
     "sanitize-html": "^2.7.0",
     "sharp": "^0.30.2",
